--- a/src/routes/user.css
+++ b/src/routes/user.css
@@ -7,6 +7,14 @@
 	font-size: 1em;
 	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 	margin-top: 0.4em;
+	padding: 1px 2px;
+}
+
+.formAddWork__select {
+	font-size: 1em;
+	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+	margin-top: 0.4em;
+	padding: 1px 2px;
 }
 
 .formAddWork__button {
