--- a/src/routes/user.css
+++ b/src/routes/user.css
@@ -26,10 +26,12 @@
 .workCard {
 	font-size: 1em;
 	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+	padding: 0.5em;
+	margin: 0.5em 0 0;
 }
 
 .workCard__name {
-	margin: 1em 0 0.5em;
+	margin: 0 0 0.5em;
 }
 
 .workCard__book {
