--- a/src/routes/user.css
+++ b/src/routes/user.css
@@ -15,6 +15,16 @@
 	margin: 0;
 }
 
+.workCard__event {
+	font-size: 0.8em;
+	color: #FFF;
+	margin: 0.25em 0 0;
+	background-color: #D32F2F;
+	border-radius: 0.5em;
+	padding: 0.25em 0.5em;
+	display: inline-block;
+}
+
 /*.tadleOfWorks {
 	border: 1px solid #999;
 	border-collapse: collapse;
