примитивная работа со статусами

--- a/src/routes/user.css
+++ b/src/routes/user.css
@@ -115,3 +115,13 @@
 	/*font-size: 0.8em;*/
 	/*color: #404040;*/
 }
+
+.status {
+	margin: 0 0 0.5em;
+	color: #696969;
+	font-size: 0.8em;
+}
+
+.status1 {
+	background-color: #99CCFF !important;
+}
