--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -66,6 +66,7 @@
     font-size: 1em;
 	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 	font-weight: 500;
+	color: #000000;
 }
 
 .worksList {
